删除模板与添加登录界面4.29

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">习惯与日程助手</string>
-    <string name="login_HeadLine">登录界面</string>
+    <string name="login_headline">登录界面</string>
 
 
 </resources>
