部分完成个人页面5.3

--- a/app/src/main/res/values-en-rAS/strings.xml
+++ b/app/src/main/res/values-en-rAS/strings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Habit and schedule assistant</string>
+    <string name="app_name">habit</string>
     <string name="login_headline">login</string>
-
 </resources>
